# canonical-package-statistics

./: .gitignore  README.md  pyproject.toml
src/canonical_package_statistics/: app.py
tests/: test_app.py
